Выполнить ТЗ спринта №6. Добавить новую функциональность ТЗ: история задач неограничена, сохранять только один последний экземпляр задачи, обновить старые и добавить новые unit - тесты. Выполнить проверку.